@@ -3,8 +3,11 @@ python-django (1.2.3-2) unstable; urgency=low
   * Team upload.
   * Disable model tests that require an internet connection.
     Closes: #601070
+  * Include python.mk conditionally as explained in its header.
+    Helps backports to Lenny which has no python.mk.
+    Closes: #601608
 
- -- Evgeni Golov <evgeni@debian.org>  Thu, 28 Oct 2010 12:34:00 +0200
+ -- Evgeni Golov <evgeni@debian.org>  Thu, 28 Oct 2010 12:37:15 +0200
 
 python-django (1.2.3-1) unstable; urgency=low
 
